bin/tests/errors_lexer/lexer/lex_err_reserved_identifier.swg
#global fileprivate

var __reserved = 0 // swc-expected-error {{lex_err_reserved_identifier}}
